--- a/exercicio22-banco-js/css/style.css
+++ b/exercicio22-banco-js/css/style.css
@@ -33,7 +33,7 @@ main {
   flex-direction: row;
   border-radius: 10px; }
   .box .aside-box {
-    background-image: url("https://blog.leucotron.com.br/wp-content/uploads/2018/03/166841-8-passos-para-melhorar-a-experiencia-no-atendimento-em-bancos.jpg");
+    background-image: url(../img/bank-img.jpg);
     background-position: center;
     background-size: 27em;
     background-repeat: no-repeat;
@@ -67,16 +67,30 @@ main {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
-  .box .floating-label input {
-    margin-left: 2em;
-    margin-bottom: .6em;
-    padding: .3em;
-    border: none;
-    border-bottom: 1px solid #93a6b9;
-    border-radius: 4px; }
-  .box .floating-label #togglePassword {
-    margin-left: -30px;
-    cursor: pointer; }
+  .box .floating-label {
+    display: flex; }
+    .box .floating-label input {
+      margin-left: 2em;
+      margin-bottom: .6em;
+      padding: .3em;
+      border: none;
+      border-bottom: 1px solid #93a6b9;
+      border-radius: 4px;
+      box-shadow: 0 0 1px #000; }
+    .box .floating-label #showPassword {
+      width: 2.4em;
+      height: 1.4em;
+      display: flex;
+      align-items: center;
+      margin-left: -2.3em;
+      margin-top: .2em;
+      background: transparent;
+      border: none;
+      transition: .2s;
+      opacity: .7;
+      cursor: pointer; }
+      .box .floating-label #showPassword img {
+        width: 1.5em; }
   .box #login-btn {
     margin-top: 2em;
     padding: .4em;
