--- a/exercicio22-banco-js/sass/main.sass
+++ b/exercicio22-banco-js/sass/main.sass
@@ -34,7 +34,7 @@ main
   border-radius: 10px
 
   .aside-box
-    background-image: url("https://blog.leucotron.com.br/wp-content/uploads/2018/03/166841-8-passos-para-melhorar-a-experiencia-no-atendimento-em-bancos.jpg")
+    background-image: url(../img/bank-img.jpg)
     background-position: center
     background-size: 27em
     background-repeat: no-repeat
@@ -80,6 +80,8 @@ main
 
 
   .floating-label
+    display: flex
+
 
     input
       margin-left: 2em
@@ -88,10 +90,24 @@ main
       border: none
       border-bottom: 1px solid #93a6b9
       border-radius: 4px
+      box-shadow: 0 0 1px #000
 
-    #togglePassword
-      margin-left: -30px; 
-      cursor: pointer;
+    #showPassword
+      width: 2.4em
+      height: 1.4em
+      display: flex
+      align-items: center
+      margin-left: -2.3em
+      margin-top: .2em
+      background: transparent
+      border: none
+      transition: .2s
+      opacity: .7
+      cursor: pointer
+
+      img
+        width: 1.5em
+
   
   #login-btn
     margin-top: 2em
